fix(core): 復号した平文を、失敗したと告げたまま置き去りにしない
門の 2 段目が 5 件を出した。うち 1 件は /security-review が HIGH で出したもので、
この差分が露出そのものを変えていた。

単一出力の 6 経路（merge / reorder / rotate / extractPages / deletePages / assemble）に
後始末が無かった。分割系は持っている。差分の前はそれで済んでいた——あそこへ届く
暗号化された入力はオーナーパスワードだけの文書であり、残る平文の中身はもともと
誰でも開けた。鍵を通せるようになったいま、残るのはユーザーパスワードで守られた文書を
完全に復号した写しである（SECURITY.md「対象範囲」／優先順位 1・2）。

★ 書き終えた後の失敗でも消す。PdfDocument#close は閉じるときに初めて投げることがあり
（#150）、完全に書けた平文が残る形がいちばん危ない。PdfBoxEncryption#protectInto が
閉じる失敗を消す範囲から外しているのは、あちらの出力が保護されているからである。
ここは逆で、残るものが平文である。

残りの 4 件も直した。単一入力の 6 本に null の検めが無く、NOT_A_PDF に畳まれて
正しい入力のせいにされていた（requireInputs の Javadoc 自身がそれを避けると書いていた）。
Sources.of(null 要素) が素の NullPointerException を漏らしていた。Password の closed が
volatile でなく、画面から裏へ渡す経路で印が見えず検査が素通りしうる。
requireInputs を差し込んだせいで requireRange の Javadoc が孤児になっていた。

docs/SPEC.md 4.2 の PageOperations が Path/List<Path> のままで、鍵がどう届くのかを
正本が説明していなかった。docs/HANDOVER.md の「M0 では行えない」に訂正を追記した
——口は入ったが、画面はまだ繋がっていない。

#190 に、対象範囲の半分がここへ移ったことを書いた。

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>